实现界面接口查询详细数据
